force-app/main/default/objects/Case/fields/SC_Accessibility_Status__c.field-meta.xml
<CustomField>
    <fullName>SC_Accessibility_Status__c</fullName><label>Accessibility Information Status</label><length>40</length><type>Text</type>
</CustomField>