force-app/main/default/objects/Case/fields/SC_Consent_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>SC_Consent_Confirmed__c</fullName><label>Consent Confirmed</label><defaultValue>false</defaultValue><type>Checkbox</type>
</CustomField>