force-app/main/default/objects/Case/fields/SC_Consent_Draft__c.field-meta.xml
<CustomField>
    <fullName>SC_Consent_Draft__c</fullName><label>Confirmed Support Draft</label><length>4096</length><type>LongTextArea</type><visibleLines>8</visibleLines>
</CustomField>