force-app/main/default/objects/Case/fields/SC_Is_Demo__c.field-meta.xml
<CustomField>
    <fullName>SC_Is_Demo__c</fullName><label>Synthetic Demo</label><defaultValue>false</defaultValue><type>Checkbox</type>
</CustomField>