force-app/main/default/objects/Case/fields/SC_Program__c.field-meta.xml
<CustomField>
    <fullName>SC_Program__c</fullName><label>Selected Program</label><deleteConstraint>SetNull</deleteConstraint><referenceTo>Sports_Program__c</referenceTo><relationshipLabel>Support Requests</relationshipLabel><relationshipName>Support_Requests</relationshipName><type>Lookup</type>
</CustomField>