force-app/main/default/objects/Case/fields/SC_Reply_Channel__c.field-meta.xml
<CustomField>
    <fullName>SC_Reply_Channel__c</fullName><label>Preferred Response Channel</label><length>40</length><type>Text</type>
</CustomField>