force-app/main/default/objects/Case/fields/SC_Request_Hash__c.field-meta.xml
<CustomField>
    <fullName>SC_Request_Hash__c</fullName><label>Request Hash</label><length>64</length><type>Text</type>
</CustomField>