force-app/main/default/objects/Case/fields/SC_Request_Key__c.field-meta.xml
<CustomField>
    <fullName>SC_Request_Key__c</fullName><label>Request Key</label><caseSensitive>true</caseSensitive><externalId>true</externalId><length>64</length><type>Text</type><unique>true</unique>
</CustomField>