force-app/main/default/objects/Case/fields/SC_Runtime_User__c.field-meta.xml
<CustomField>
    <fullName>SC_Runtime_User__c</fullName><label>Runtime User</label><length>18</length><type>Text</type>
</CustomField>