force-app/main/default/objects/Case/fields/SC_Support_Category__c.field-meta.xml
<CustomField>
    <fullName>SC_Support_Category__c</fullName><label>Support Category</label><length>80</length><type>Text</type>
</CustomField>