force-app/main/default/objects/Case/recordTypes/SportCompass_Support.recordType-meta.xml
<RecordType>
    <fullName>SportCompass_Support</fullName><active>true</active><businessProcess>SportCompass_Support</businessProcess><label>Sport Compass Support</label>
</RecordType>