force-app/main/default/objects/Case/listViews/SportCompass_Verification.listView-meta.xml
<ListView>
    <fullName>SportCompass_Verification</fullName><columns>CASES.CASE_NUMBER</columns><columns>CASES.SUBJECT</columns><columns>CASES.STATUS</columns><filterScope>Everything</filterScope><filters><field>Case.SC_Is_Demo__c</field><operation>equals</operation><value>1</value></filters><filters><field>CASES.STATUS</field><operation>notEqual</operation><value>Closed</value></filters><filters><field>Case.SC_Support_Category__c</field><operation>equals</operation><value>Accessibility information needs verification</value></filters><label>Sport Compass - Verify accessibility</label>
</ListView>